--- a/corso/settimana_5_bootstrap/l19_30_11_2023/esercizi/sass/_bootstrap-overrides.scss
+++ b/corso/settimana_5_bootstrap/l19_30_11_2023/esercizi/sass/_bootstrap-overrides.scss
@@ -4,7 +4,11 @@
 // scss-docs-start import-stack
 // Configuration
 @import "./bootstrap/scss/functions";
+//var qua
+
 @import "./bootstrap/scss/variables";
+//map qua
+
 @import "./bootstrap/scss/variables-dark";
 @import "./bootstrap/scss/maps";
 @import "./bootstrap/scss/mixins";
