--- a/corso/settimana_5_bootstrap/l19_30_11_2023/esercizi/sass/_bootstrap-overrides.scss
+++ b/corso/settimana_5_bootstrap/l19_30_11_2023/esercizi/sass/_bootstrap-overrides.scss
@@ -8,7 +8,23 @@
 
 @import "./bootstrap/scss/variables";
 //map qua
+$h7-font-size: $font-size-base * 0.8;
+$h8-font-size: $font-size-base * 0.7;
+$h9-font-size: $font-size-base * 0.6;
+$h10-font-size: $font-size-base * 0.5;
 
+$font-sizes: (
+  1: $h1-font-size,
+  2: $h2-font-size,
+  3: $h3-font-size,
+  4: $h4-font-size,
+  5: $h5-font-size,
+  6: $h6-font-size,
+  7: $h7-font-size,
+  8: $h8-font-size,
+  9: $h9-font-size,
+  10: $h10-font-size,
+);
 @import "./bootstrap/scss/variables-dark";
 @import "./bootstrap/scss/maps";
 @import "./bootstrap/scss/mixins";
