--- a/corso/settimana_6_js_avanzato/l22_06_12_2023/esercizi/assets/css/custom.css
+++ b/corso/settimana_6_js_avanzato/l22_06_12_2023/esercizi/assets/css/custom.css
@@ -4,3 +4,18 @@
 .cardContainer img {
   max-height: 300px;
 }
+.dropdown-menu[data-bs-popper] {
+  top: 110% !important;
+  left: -250px !important;
+}
+.dropdown-menu {
+  width: 330px;
+}
+.dropdown-menu p {
+  white-space: pre-line;
+  overflow: hidden;
+  width: 200px;
+}
+.dropdown-menu img {
+  height: 100px;
+}
